// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Feed component Match its snapshot When all props exists 1`] = `
<Layout>
  <Form
    id="post-form"
    onSubmit={[Function]}
  >
    <TextInput
      id="input-text"
      maxLength={300}
      name="text"
      onChange={[Function]}
      placeholder="What's happening?"
      type="text"
      value="My input text"
    />
    <SubmitButton
      id="submit-button"
      type="submit"
      value="Send"
    />
  </Form>
  <Card
    body="My body 1"
    key="1"
    title="My Title 1"
  />
  <Card
    body="My body 2"
    key="2"
    title="My Title 2"
  />
</Layout>
`;

exports[`Test Feed component Match its snapshot When no props exists 1`] = `
<Layout>
  <Form
    id="post-form"
    onSubmit={[Function]}
  >
    <TextInput
      id="input-text"
      maxLength={300}
      name="text"
      onChange={[Function]}
      placeholder="What's happening?"
      type="text"
      value=""
    />
    <SubmitButton
      id="submit-button"
      type="submit"
      value="Send"
    />
  </Form>
</Layout>
`;
